fix: remove extra padding from Card Instances

--- a/src/pages/AddQuestion/styles.scss
+++ b/src/pages/AddQuestion/styles.scss
@@ -1,7 +1,6 @@
 .add-question-container {
   position: relative;
   &__body {
-    padding: 10px;
     h3 {
       margin: 0;
       margin: 10px 0 20px;
