--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -7,7 +7,6 @@
     text-align: center;
   }
   &__poll {
-    padding: 10px;
     display: flex;
     &__body {
       flex: 1;
@@ -43,6 +42,8 @@
     border-right: 1px solid #ccc;
     img {
       border-radius: 50%;
+      height: 128px;
+      width: 128px;
     }
   }
 }
