--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,7 +1,5 @@
 .login-container {
-  &__body {
-    padding: 10px;
-  }
+
   &__logo {
     margin: 25px auto;
     display: block;
