--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -14,9 +14,7 @@
       transform: translate(-50%, -50%);
     }
   }
-  &__body {
-    padding: 10px;
-  }
+
   &__user-image {
     text-align: center;
     margin-bottom: 10px;
